[package]
authors = ["The Veracruz Development Team"]
build = "build.rs"
description = "The Veracruz attestation web-service.  Can be used to authenticate or reject attestation tokens purporting to originate from these isolates."
edition = "2018"
name = "proxy-attestation-server"
version = "0.3.0"

[[bin]]
name = "proxy-attestation-server"
path = "src/cli.rs"
required-features = ["cli"]

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# a feature to enable CLI-only dependencies
# https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
cli = ["structopt"]

# a feature to enable PSA native attestation.
# Note: Final attestation is always PSA. This is just to enable platforms
# that use PSA for their native attestation.
icecap = [
  "psa-attestation/icecap",
  "openssl/vendored",
]
linux = ["psa-attestation/linux"]
nitro = [
  "nitro-enclave-attestation-document",
  "psa-attestation/nitro",
]

[dependencies]
actix-http = "3"
actix-rt = "2"
actix-web = "4"
base64 = "0.13.0"
curl = "0.4.43"
dotenv = "0.9.0"
env_logger = "0.9.0"
err-derive = "0.2"
hex = "0.4.2"
http = "0.2.4"
lazy_static = "1.3"
log = "0.4.13"
nb-connect = "1.0.3"
nitro-enclave-attestation-document = { path = "../third-party/nitro-enclave-attestation-document", optional = true }
openssl = "0.10.24"
percent-encoding = "2.1"
psa-attestation = { path = "../psa-attestation" }
rand = "0.8.3"
serde_json = "1.0"
stringreader = "0.1"
structopt = { version = "0.3", optional = true, features = ["wrap_help"] }
transport-protocol = { path = "../transport-protocol" }
veracruz-utils = { path = "../veracruz-utils", features = ["std"] }

[dev-dependencies]
psa-attestation = { path = "../psa-attestation" }
