[package]
authors = ["The Veracruz Development Team"]
build = "build.rs"
description = "An implementation of Arm's PSA attestation protocol."
edition = "2018"
links = "psa_attestation"
name = "psa-attestation"
version = "0.3.0"

[lib]
crate-type = ["rlib"]

[features]
# build.rs depends on features
icecap = []
linux = []
nitro = [
# FIXME: fake_random is not secure! (Also, does this run in the enclave?)
  "mbedtls-sys-auto/fake_random",
]

[dependencies]
libc = "0.2.124"
# We are not really using mbedtls-sys-auto but we are using the C
# libraries libmbedcrypto.a and libshim.a that mbedtls-sys-auto builds.
mbedtls-sys-auto = { path = "../third-party/rust-mbedtls/mbedtls-sys" }

[build-dependencies]
bindgen = "0.59.2"
cfg-if = "1.0"
