[package]
authors = ["The Veracruz Development Team"]
description = "Automatically-generated C bindings for the Runtime Manager enclave image."
edition = "2018"
name = "runtime-manager-bind"
version = "0.3.0"

[dependencies]

[build-dependencies]
bindgen = "0.53.1"
bitflags = "=1.2.1"
glob = "0.3.0"
