[package]
authors = ["The Veracruz Development Team"]
description = "The trusted Veracruz runtime's command-and-control module.  Co-ordinates and directs the rest of the runtime."
edition = "2018"
name = "runtime_manager_enclave"
version = "0.3.0"

[lib]
crate-type = ["staticlib"]
name = "runtime_manager_enclave"
path = "src/lib.rs"

[[bin]]
name = "runtime_manager_enclave"
path = "src/main.rs"

[features]
default = []
icecap = [
  "bincode",
  "execution-engine/icecap",
  "finite-set",
  "hypervisor-event-server-types",
  "icecap-core",
  "icecap-rpc",
  "icecap-ring-buffer",
  "icecap-start-generic",
  "icecap-std-external",
  "libc",
  "libm",
  "log",
  "policy-utils/icecap",
  "psa-attestation",
  "serde",
  "session-manager/icecap",
  "transport-protocol/icecap",
  "veracruz-utils/icecap",
]
linux = [
  "bincode",
  "clap",
  "env_logger",
  "execution-engine/std",
  "io-utils/linux",
  "log",
  "nix",
  "policy-utils/std",
  "psa-attestation/linux",
  "session-manager/std",
  "veracruz-utils/linux",
]
nitro = [
  "bincode",
  "execution-engine/std",
  "execution-engine/nitro",
  "io-utils/nitro",
  "libc",
  "policy-utils/std",
  "nsm_api",
  "nsm_lib",
  "nix",
  "ring/nitro",
  "ring/std",
  "session-manager/nitro",
  "veracruz-utils/nitro",
]

[dependencies]
bincode = { version = "1.2.1", default-features = false, optional = true }
clap = { version = "2.33", optional = true }
env_logger = { version = "0.8.3", optional = true }
err-derive = "0.2"
execution-engine = { path = "../execution-engine" }
finite-set = { path = "../icecap/crates/framework/helpers/finite-set", optional = true }
half = "=1.7.1"
hex = { version = "0.4.2" }
hypervisor-event-server-types = { path = "../icecap/crates/hypervisor/components/event-server/types", optional = true }
icecap-core = { path = "../icecap/crates/framework/base/icecap-core", optional = true }
icecap-rpc = { path = "../icecap/crates/framework/base/icecap-rpc", optional = true }
icecap-ring-buffer = { path = "../icecap/crates/framework/base/icecap-ring-buffer", optional = true }
icecap-start-generic = { path = "../icecap/crates/framework/base/icecap-start/generic", optional = true }
icecap-std-external = { path = "../icecap/crates/framework/std-support/icecap-std-external", optional = true }
io-utils = { path = "../io-utils", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libc = { path = "../icecap/sysroot/libc", optional = true }
libm = { version = "0.2", optional = true }
log = { version = "0.4.13", optional = true }
nix = { version = "0.15", optional = true }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package = "aws-nitro-enclaves-nsm-api", optional = true }
nsm_lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package = "nsm-lib", optional = true }
policy-utils = { path = "../policy-utils" }
protobuf = "=2.8.1"
psa-attestation = { path = "../psa-attestation", optional = true }
ring = "0.16.11"
rustls = "0.16"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
serde_json = "1.0"
session-manager = { path = "../session-manager" }
transport-protocol = { path = "../transport-protocol" }
veracruz-utils = { path = "../veracruz-utils" }
wasi-types = { path = "../third-party/wasi-types" }
wasmi = { path = "../third-party/wasmi", optional = true }


[profile.release]
lto = true
