[package]
authors = ["The Veracruz Development Team"]
description = "The trusted Veracruz runtime's command-and-control module.  Co-ordinates and directs the rest of the runtime."
edition = "2018"
name = "runtime-manager"
version = "0.3.0"
resolver = "2"

[features]
default = []
icecap = [
  "bincode",
  "execution-engine/icecap",
  "policy-utils/icecap",
  "psa-attestation",
  "serde",
  "session-manager/icecap",
  "transport-protocol/icecap",
  "veracruz-utils/icecap",
]
icecap-lkvm = []
icecap-qemu = []
linux = [
  "bincode",
  "execution-engine/std",
  "io-utils/linux",
  "nix",
  "policy-utils/std",
  "psa-attestation/linux",
  "session-manager/std",
  "veracruz-utils/linux",
]
nitro = [
  "bincode",
  "execution-engine/std",
  "execution-engine/nitro",
  "io-utils/nitro",
  "policy-utils/std",
  "nix",
  "nsm_api",
  "session-manager/nitro",
  "veracruz-utils/nitro",
]

[dependencies]
anyhow = "1"
bincode = { version = "1.2.1", default-features = false, optional = true }
err-derive = "0.2"
execution-engine = { path = "../execution-engine" }
hex = { version = "0.4.2" }
io-utils = { path = "../io-utils", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.13"
nix = { version = "0.20.2", optional = true }
nsm_api = { package = "aws-nitro-enclaves-nsm-api", version = "0.2.1", optional = true }
policy-utils = { path = "../policy-utils" }
protobuf = "=2.8.1"
psa-attestation = { path = "../psa-attestation", optional = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
serde_json = "1.0"
session-manager = { path = "../session-manager" }
transport-protocol = { path = "../transport-protocol" }
uuid = { version = "1.1.2", features = ["serde"] }
veracruz-utils = { path = "../veracruz-utils" }
wasi-types = { path = "../third-party/wasi-types" }
wasmi = { path = "../third-party/wasmi", optional = true }
