[package]
authors = ["The Veracruz Development Team"]
description = "TLS endpoint and session management for the trusted Veracruz runtime"
edition = "2018"
name = "session-manager"
version = "0.3.0"

[features]
icecap = [
  "policy-utils/icecap",
]
nitro = [
  "policy-utils/std",
]
std = [
  "policy-utils/std",
]

[dependencies]
err-derive = "0.2"
mbedtls = { path = "../third-party/rust-mbedtls/mbedtls" }
platform-services = { path = "../platform-services" }
policy-utils = { path = "../policy-utils" }
veracruz-utils = { path = "../veracruz-utils" }
