[package]
authors = ["The Veracruz Development Team"]
description = "TLS endpoint and session management for the trusted Veracruz runtime"
edition = "2018"
name = "session-manager"
version = "0.3.0"

[features]
nitro = [
  "mbedtls/monitor_getrandom",
  "policy-utils/std",
  "veracruz-utils/nitro",
]
std = [
  "policy-utils/std",
  "veracruz-utils/std",
]

[dependencies]
anyhow = "1"
err-derive = "0.2"
mbedtls = { path = "../third-party/rust-mbedtls/mbedtls", default-features = false, features = ["std", "aesni", "padlock", "tls13"] }
platform-services = { path = "../platform-services" }
policy-utils = { path = "../policy-utils" }
veracruz-utils = { path = "../veracruz-utils", optional = true }
