[package]
authors = ["The Veracruz Development Team"]
description = "Automatically-generated C bindings for the SGX root enclave image."
edition = "2018"
name = "sgx-root-enclave-bind"
version = "0.3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53.1"
bitflags = "=1.2.1"
glob = "0.3.0"
