[package]
name = "sgx_root_enclave"
# NOTE: when update this version, please also update sgx entry in populate_test_database.sh in veracruz-server-test and veracruz-test 
version = "0.3.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = "The root attestation isolate that challenges additional isolates on the delegate's machine using local attestation.  This is a key component of the Veracruz proxied attestation system."

[lib]
name = "sgx_root_enclave"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
lazy_static = { version = "1.4.0", features= ["spin_no_std"] }
transport-protocol = { path = "../transport-protocol", features=["sgx"] }
ring = { git = "https://github.com/veracruz-project/ring.git", version = "=0.16.11", branch = "veracruz", features = ["mesalock_sgx"] }
veracruz-utils = { path = "../veracruz-utils", features = ["sgx"] }
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tdh = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_alloc = { git = "https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git", branch = "veracruz" }
