[package]
name = "sgx_root_enclave"
# NOTE: when update this version, please also update sgx entry in populate_test_database.sh in veracruz-server-test and veracruz-test 
authors = ["The Veracruz Development Team"]
description = "The root attestation isolate that challenges additional isolates on the delegate's machine using local attestation.  This is a key component of the Veracruz proxied attestation system."
edition = "2018"
version = "0.3.0"

[lib]
crate-type = ["staticlib"]
name = "sgx_root_enclave"
path = "src/lib.rs"

[dependencies]
bitflags = "=1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
ring = { git = "https://github.com/veracruz-project/ring.git", version = "=0.16.11", branch = "veracruz", features = [
  "mesalock_sgx",
] }
sgx_tdh = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
transport-protocol = { path = "../transport-protocol", features = ["sgx"] }
veracruz-utils = { path = "../veracruz-utils", features = ["sgx"] }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_alloc = { git = "https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git", branch = "veracruz" }
