[package]
name = "sinaloa-cli"
version = "0.1.0"
authors = ["The Veracruz Development Team"]
edition = "2018"
description = """\
    Command-line interface for Sinaloa, the REST frontend \
    for Veracruz."""
autobins = false

# this is the only way to change the default binary name
[[bin]]
name = "sinaloa"
path = "src/main.rs"

[features]
sgx = ["sgx_ucrypto", "sgx_urts", "sgx_types", "sinaloa/sgx", "veracruz-utils/std"]
tz = ["sinaloa/tz", "veracruz-utils/tz"]

[dependencies]
sinaloa = { path = "../sinaloa" }
veracruz-utils = {path = "../veracruz-utils", features=["std"] }
structopt = { version="0.3", features=["wrap_help"] }
log = "0.4"
env_logger = "0.7"
actix-rt = "1.0.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_ucrypto = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_urts = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_ucrypto = { branch="veracruz", git = 'https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git', optional = true }
sgx_types = { branch="veracruz", git = 'https://github.com/veracruz-project/incubator-teaclave-sgx-sdk.git', optional = true }
